tests/invalid/While_Invalid_3.whiley
public export method test() -> int:
    int i = 0
    int r
    //
    while i < 10:
        r = r + i
    //
    return r
